--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "4.4.4"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "4.18.1",
