--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "start": "node build/index.js",
+    "dev": "cross-env NODE_ENV=development ts-node-dev src/index.ts",
+    "start": "cross-env NODE_ENV=production node build/index.js",
     "lint": "ts-standard",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "github": "curl -I https://api.github.com/users/octocat"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/nodemailer": "^6.4.5",
+    "jest": "^29.0.3",
+    "supertest": "^6.2.4",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^11.0.0",
     "typescript": "4.4.4"
@@ -42,6 +45,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
     "express": "4.18.1",
     "nodemailer": "^6.7.8"
