--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev src/index.ts",
     "start": "cross-env NODE_ENV=production node build/index.js",
-    "lint": "ts-standard",
+    "lint": "eslint . --ext .ts",
     "build": "tsc",
     "test": "cross-env NODE_ENV=test jest --verbose",
     "github": "curl -I https://api.github.com/users/octocat"
@@ -36,32 +36,20 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/nodemailer": "^6.4.5",
-    "jest": "^29.0.3",
-    "supertest": "^6.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.42.0",
+    "standard": "^17.1.0",
     "ts-node-dev": "^2.0.0",
-    "ts-standard": "^11.0.0",
-    "typescript": "4.4.4"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.1.4",
     "express": "4.18.1",
-    "nodemailer": "^6.7.8"
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    },
-    "extends": [
-      "./node_modules/ts-standard/eslintrc.json"
-    ]
-  },
-  "ts-standard": {
-    "ignore": [
-      "build",
-      "node_modules"
-    ]
+    "express-validator": "^7.0.1",
+    "nodemailer": "^6.9.3"
   }
 }
