--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev src/index.ts",
-    "start": "cross-env NODE_ENV=production node build/index.js",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint . --ext .ts",
     "build": "tsc",
     "test": "cross-env NODE_ENV=test jest --verbose",
