--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "declaration": true,
     "sourceMap": true
   },
-  "exclude": ["node_modules", "build"],
+  "exclude": ["node_modules", "dist"],
   "include": ["src"]
 }
