--- a/package.json
+++ b/package.json
@@ -35,21 +35,25 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.42.0",
+    "prisma": "^4.15.0",
     "standard": "^17.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "express": "4.18.1",
     "express-validator": "^7.0.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3"
   }
 }
