--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ts-node-dev src/index.ts",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "dev": "ts-node-dev src/index.ts",
+    "start": "node dist/index.js --inspect",
     "lint": "eslint . --ext .ts",
     "build": "tsc",
-    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test": "jest --verbose",
     "github": "curl -I https://api.github.com/users/octocat"
   },
   "repository": {
@@ -49,7 +49,6 @@
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "express": "4.18.1",
     "express-validator": "^7.0.1",
